--- a/webconfig/public/rule/new.html
+++ b/webconfig/public/rule/new.html
@@ -3,7 +3,124 @@
   
   <meta charset="utf-8" content="text/html; charset=ISO-8859-1" http-equiv="content-type">
   <title>detail</title>
-  <link rel="stylesheet" href="/stylesheets/main.css"></head><body>
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="../stylesheets/FlexiJsonEditor/jsoneditor.css"/> 
+
+  <script type="text/javascript" src="./scripts/jquery-1.9.1.js"></script>
+  <script src="./scripts/jquery.min.js"></script>
+  <script src="./scripts/jquery.jsoneditor.js"></script>
+
+<script type="text/javascript">
+
+
+ $(function(){
+
+        //drilling rule editor
+        $('#drill_rules').change(function() {
+
+        var  val = $('#drill_rules').val();
+
+          if (val) {
+              try { jsonTest = JSON.parse(val); }
+              catch (e) { alert('Error in parsing json. ' + e); }
+          } else {
+                  jsonTest = {};
+                }
+        var  opt = { 
+              change: function(jsonTest) { 
+                $('#drill_rules').val(JSON.stringify(jsonTest));
+              }
+          };        
+          $('#ruleEditor').jsonEditor(jsonTest,opt);
+        });
+
+        // script editor render
+        $('#script').change(function() {
+
+//alert("script");
+
+          val = $('#script').val();
+
+          if (val) {
+              try { scriptJsonTest = JSON.parse(val); }
+              catch (e) { alert('Error in parsing json. ' + e); }
+          } else {
+                  scriptJsonTest = {};
+                }
+          opt = { 
+              change: function(scriptJsonTest) { 
+                $('#script').val(JSON.stringify(scriptJsonTest));
+              }
+          };        
+          $('#scriptEditor').jsonEditor(scriptJsonTest,opt);
+        });
+
+        //navigation rule editor render
+        $('#navigate_rule').change(function() {
+          //alert("script");
+
+          var val = $('#navigate_rule').val();
+
+          if (val) {
+              try { jsonTest = JSON.parse(val); }
+              catch (e) { alert('Error in parsing json. ' + e); }
+          } else {
+                  jsonTest = {};
+                }
+          var opt = { 
+              change: function(jsonTest) { 
+                $('#navigate_rule').val(JSON.stringify(jsonTest));
+              }
+          };        
+          $('#naviEditor').jsonEditor(jsonTest,opt);
+        });        
+
+/////////////////////////////////////////////////////
+
+        var drillRules = $.parseJSON($("#drill_rules").val());
+        var  optRule = { 
+              change: function(drillRules) { 
+                $('#drill_rules').val(JSON.stringify(drillRules));
+              }
+          }; 
+
+        $('#ruleEditor').jsonEditor(drillRules,optRule);  
+
+/////////////////////////////////////////////////////
+
+           var  scriptJson = $.parseJSON($("#script").val());
+           var   optJS = { 
+                  change: function(scriptJson) { 
+                    $('#script').val(JSON.stringify(scriptJson));
+                  }
+              };  
+
+            $('#scriptEditor').jsonEditor(scriptJson,optJS); 
+
+/////////////////////////////////////////////////////             
+
+           var naviRule = $.parseJSON($("#navigate_rule").val());
+              var optNavi = { 
+                  change: function(naviRule) { 
+                    $('#navigate_rule').val(JSON.stringify(naviRule));
+                  }
+              };  
+
+            $('#naviEditor').jsonEditor(naviRule,optNavi); 
+
+        $('#form').submit(function(){
+          
+          $('#drill_rules').val(JSON.stringify(drillRules));
+          $('#scriptJson').val(JSON.stringify(scriptJson)); 
+          $('#navigate_rule').val(JSON.stringify(naviRule));          
+        }); 
+              
+
+  });
+</script>
+</head>
+
+<body>
 <h1>New Drilling Rules</h1>
 
 <hr style="width: 100%; height: 2px;"><a href="/rule">Return</a>
@@ -46,8 +163,7 @@
       </tr>
       <tr>
         <th>cookie</th>
-        <td> <textarea id="cookie" name="cookie" cols="130" rows="5">
-        </textarea></td> 
+        <td> <textarea id="cookie" name="cookie" cols="130" rows="5"></textarea></td> 
       </tr>
       <tr>
         <th>Inject jquery</th> 
@@ -61,19 +177,34 @@
       </tr>  
       <tr>
         <th>Drill rules</th>
-        <td> <textarea id="drill_rules" name="drill_rules" cols="130" rows="10">
-        </textarea></td>      
+        <td>
+        <div id="ruleEditor" class="json-editor"></div>
+         <div id="ruleJson">
+          <textarea id="drill_rules" name="drill_rules" cols="130" rows="10"></textarea>
+        </div>
+        </td>      
       </tr>  
+
       <tr>
         <th>script</th>
-         <td> <textarea id="script" name="script" cols="130" rows="5">
-        </textarea></td> 
-      </tr>
+        <td>
+        <div id="scriptEditor" class="json-editor"></div>
+         <div id="scriptJsonDiv">
+          <textarea id="script" name="script" cols="130" rows="10"></textarea>
+        </div>
+        </td>      
+      </tr> 
+
       <tr>
         <th>navigate rule</th>
-        <td> <textarea id="navigate_rule" name="navigate_rule" cols="130" rows="5">
-        </textarea></td> 
-      </tr>  
+        <td>
+        <div id="naviEditor" class="json-editor"></div>
+         <div id="naviJson">
+          <textarea id="navigate_rule" name="navigate_rule" cols="130" rows="10"></textarea>
+        </div>
+        </td>      
+      </tr> 
+
       <tr>
         <th>stop page</th>
         <td> <input name="stoppage" id="stoppage" value="" size="30" type="text"></td>
